add tests, routes description in swagger
