# src/core/event_type.py
@@ -1,0 +1,8 @@
+from enum import Enum
+
+
+class EventType(Enum):
+    DELETE_NOMENCLATURE = 1
+    CHANGE_NOMENCLATURE = 2
+    CHANGE_RANGE = 3
+    CHANGE_BLOCK_PERIOD = 4
